--- a/Endaufgabe/index.html
+++ b/Endaufgabe/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <header>
+        <h1>Döner-Trainer</h1>
+        <p>Leite deine eigene Dönerbude. Verstelle die Spieleinstellungen zu deinen Vorstellungen und klicke anschließend auf
+            "Start Game". <br> Versuche so viele Kunden wie möglich mit der richtigen Bestellung zu bedienen.
+        </p>
+    </header>
 
     <section class="sec1">
         <div id="breadStock">Bread<meter id="stockMeterB" value="0.8"></meter>
@@ -121,7 +127,7 @@
         
         <div id="meatA">meat<button type="button" id="addM">add</button> </div>
         
-        <div id="money">Earnings: <div id="earnings">0.00 €</div>
+        <div id="money"><div id="earnings">0.00 €</div>
             <button id="pay">cash up order</button>
         </div>
 
