Ordner erstellt und Nutzeranleitung hochgeladen

--- a/Endaufgabe/index.html
+++ b/Endaufgabe/index.html
@@ -134,14 +134,14 @@
     </div>
 
 </body>
-<script src="Vector.js" type="text/javascript" charset="utf-8"></script>
-<script src="Human.js" type="text/javascript" charset="utf-8"></script>
-<script src="Customer.js" type="text/javascript" charset="utf-8"></script>
-<script src="Worker.js" type="text/javascript" charset="utf-8"></script>
-<script src="Prepared.js" type="text/javascript" charset="utf-8"></script>
-<script src="main.js" type="text/javascript" charset="utf-8"></script>
-<script src="container.js" type="text/javascript" charset="utf-8"></script>
-<script src="pay.js" type="text/javascript" charset="utf-8"></script>
-<script src="addIngredients.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/Vector.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/Human.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/Customer.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/Worker.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/Prepared.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/main.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/container.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/pay.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/addIngredients.js" type="text/javascript" charset="utf-8"></script>
 
 </html>
